[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blaxel>=0.2.34",
    "langchain>=1.2.2",
    "langchain-anthropic>=1.3.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
]
